@@ -2,5 +2,6 @@
 # Licensed under the Universal Permissive License v 1.0 as shown at https://oss.oracle.com/licenses/upl/
 
 locals {
-  anywhere = "0.0.0.0/0"
+  anywhere      = "0.0.0.0/0"
+  anywhere_ipv6 = "::/0"
 }
